2007-08-06  Lucas Rocha  <lucasr@gnome.org>

	* Initial import.	