@@ -1,1 +1,3 @@
-Lucas Rocha <lucasr@gnome.org>
+Lucas Rocha
+E-mail: lucasr@gnome.org
+Userid: lucasr
