@@ -3,7 +3,7 @@ Module=postr
 IAge=2
 _Name=Flickr Uploader
 Icon=postr
-_Description=Upload your photos to Flickr.
+_Description=Upload your pictures to Flickr
 Authors=Lucas Rocha <lucasr@gnome.org>
 Copyright=Copyright © 2007 Lucas Rocha 
 Website=http://www.gnome.org/projects/eog
