@@ -1,2 +1,2 @@
-plugins/postr/postr.eog-plugin.in
+plugins/postr/postr.eog-plugin.desktop.in
 plugins/postr/eog-postr-plugin.c
